# wyzvrdz

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  pyproject.toml
.github/workflows/: mdformat.yml  ruff.yml
agents/: __init__.py  agent.py  wyzvrd_factory.py
agents/callbacks/: __init__.py
agents/configs/: __init__.py  wyzvrd_settings.yaml
agents/plugins/: __init__.py
agents/routing/: __init__.py  active_skill_toolset.py  request_skill_tool.py  skill_router.py
agents/services/: __init__.py  artifact.py  credential.py  cron.py  eval.py  session.py
agents/skills/agent-spawner/: SKILL.md
agents/skills/agent-spawner/evals/: evals.json
agents/skills/agent-spawner/references/: examples.md  (+2 more)
agents/skills/codebase-search/: SKILL.md
agents/skills/cron-manager/: SKILL.md
agents/skills/filesystem/: SKILL.md
agents/skills/frontend-design/: SKILL.md
agents/skills/location/: SKILL.md
agents/skills/nicegui-design/: SKILL.md
agents/skills/skill-creator/: SKILL.md
agents/skills/soul/: SKILL.md
agents/skills/task-manager/: SKILL.md
agents/skills/terminal-monitor/: SKILL.md
agents/skills/time/: SKILL.md
agents/skills/weather/: SKILL.md
agents/sub_agents/: __init__.py
agents/sub_agents/agentmail_agent/: __init__.py  agentmail_agent.py
agents/sub_agents/agentphone_agent/: __init__.py  agentphone_agent.py
agents/sub_agents/compendium_mgmt_agent/: __init__.py  compendium_mgmt_agent.py
agents/sub_agents/discord_mgmt_agent/: __init__.py  discord_mgmt_agent.py
agents/sub_agents/github_agent/: __init__.py  github_agent.py
agents/sub_agents/web_research_agent/: __init__.py  web_research_agent.py
agents/tools/: __init__.py  image_tools.py  skills.py
agents/utils/: __init__.py  helpers.py
discord_gateway/: __init__.py  main.py  state.py
discord_gateway/cogs/: agent.py  core.py  health.py  shared.py
discord_gateway/ui/: __init__.py  modals.py
(+53 files in other folders)
